js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-typeof-import-source.js
DONOTEVALUATE
(
)
;
label
:
{
typeof
import
.
source
;
}
;
